[tool.poetry]
name = "gtfs-upcoming"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
protobuf = "^4.21.11"
gtfs-realtime-bindings = "^0.0.7"
six = "^1.16.0"
prometheus-client = "^0.15.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
